--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,14 +12,14 @@ dependencies:
     sdk: flutter
   http: ^1.1.0
   dio: ^5.1.1
-  chopper: ^7.0.6
+  chopper: ^8.0.2
   overlay_support: ^2.1.0
-  share_plus: ^7.1.0
-  rxdart: ^0.27.1
+  share_plus: ^10.0.2
+  rxdart: ^0.28.0
 
 dev_dependencies:
   build_runner: ^2.0.6
-  chopper_generator: 7.0.4
+  chopper_generator: ^8.0.2
   flutter_alice:
     path: ../
 
